@@ -1,3 +1,9 @@
+2003-05-01 Jackson Harper <jackson@latitudegeo.com>
+
+	* CodeGen.cs: Add outer classes to typedefs if necesary
+	* InstrTable.cs: ldtoken instruction is a INSTR_TOK token
+	* TypeDef.cs: Add outer class property
+		
 2003-04-30 Jackson Harper <jackson@latitudegeo.com>
 
 	* MethodDef.cs: Accept and emit instructions.
